samples/_failures_safe/1761318832_25868c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccc1ca82.c: In function ‘main’:
./samples/SAFE/__tmp_ccc1ca82.c:153:17: error: expected expression at end of input
  153 |                 if (status ==
      |                 ^~
./samples/SAFE/__tmp_ccc1ca82.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccc1ca82.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccc1ca82.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccc1ca82.c:153:17: error: expected declaration or statement at end of input
